# authintic

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  docker-compose.yml
.zed/: debug.json
config/: testing.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20251010_151835_user.rs  m20251010_151835_users.rs
src/: app.rs  bgworker.rs  lib.rs  main.rs  utils.rs
src/_entities/: mod.rs  prelude.rs  users.rs
src/controllers/: api.rs
src/controllers/auth/: jwt.rs  mod.rs
src/entities/: users.rs
src/models/: mod.rs  user.rs
src/models/entities/: mod.rs  user.rs
