[workspace]
members = [".", "migration"]


[package]
name = "voice"
version = "0.1.0"
edition = "2024"

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"


[dependencies]
migration = { path = "migration"}
axum = "0.8.6"
log = "0.4.28"
sea-orm = { version = "1.1.17", features = [ "sqlx-postgres", "sqlx-sqlite", "macros", "runtime-tokio-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log", "async-await"] }
tracing-subscriber = "0.3.20"
validator = { version = "0.20.0", features = ["derive"] }
axum-extra = { version = "0.10.3", features = ["form", "typed-header"] }
error-stack = "0.6.0"
thiserror = "2.0.17"
jsonwebtoken = { version = "10.0.0", features = ["aws_lc_rs"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
chrono = "0.4.42"
dotenv = "0.15.0"
serde_yaml = "0.9.34"
serde_json = "1.0.145"
bcrypt = "0.17.1"



[dev-dependencies]
httptest = "0.16.3"
